--- a/index.html
+++ b/index.html
@@ -1,24 +1,235 @@
-<!-- 
-HTML Template for Missions, delete and replace with mission HTML
--->
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Gnius Club</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Playbook - Preescolar Sesión 16</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
-  <h1>
-    Playbook HTML Placeholder Template
-  </h1>
-  <p>
-    Replace with actual playbook code.
-  </p>
-  <script src="script.js"></script>
+<header>
+<h1><span class="book-icon">📋</span> <strong>Playbook Sesión 16 Kínder 3</strong></h1>
+<div class="header-widgets">
+<div class="timer-container">
+<span id="timer">⏱️ 00:00</span>
+<button id="startStop">Start</button>
+<button id="reset">Reset</button>
+</div>
+<div class="theme-toggle">
+<i class="fas fa-sun"></i>
+<label class="switch">
+<input type="checkbox" id="theme-toggle-input">
+<span class="slider round"></span>
+</label>
+<i class="fas fa-moon"></i>
+</div>
+</div>
+</header>
+<div class="main-container">
+<aside class="activity-list">
+<h2>Actividades</h2>
+<ul>
+<li><a href="#activity-0">📝</a></li>
+<li><a href="#activity-1">1</a></li>
+<li><a href="#activity-2">2</a></li>
+<li><a href="#activity-3">3</a></li>
+<li><a href="#activity-4">4</a></li>
+</ul>
+<div class="sidebar-info">
+<p>💡 Cada actividad está diseñada para ser lúdica y captar la atención de los más pequeños.</p>
+<p>⏱️ Los tiempos son una guía. Sé flexible y adáptate al ritmo del grupo.</p>
+</div>
+</aside>
+<main class="content">
+<div class="progress-bar">
+<div class="progress"></div>
+</div>
+<button id="toggle-dialogues">Mostrar todos los diálogos</button>
+<div class="activity-card" id="activity-0">
+<h2><span class="book-icon">📝</span> De un Vistazo: Misión La Gran Revelación de Nuestros Guardianes Inteligentes</h2>
+<p class="overview-subtitle">Resumen rápido de objetivos, materiales y preparación para esta aventura de aprendizaje.</p>
+<div class="overview-table-container">
+<table>
+<thead>
+<tr>
+<th style="width: 50%;">Objetivos, Tácticas y Entregable</th>
+<th style="width: 50%;">Materiales Específicos y Preparación Previa</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<strong>Objetivos de Aprendizaje:</strong>
+<ul>
+<li>Presentar el proyecto completo: la señal, el entrenamiento y el programa.</li>
+<li>Explicar el proceso de creación en equipo.</li>
+<li>Demostrar el funcionamiento del "Guardián Inteligente".</li>
+</ul>
+<strong>Secuencia Didáctica de la Misión:</strong>
+<ul>
+<li>⚡ Actividad 1: Bienvenida y Calentamiento Cerebral</li>
+<li>⚡ Actividad 2: Planteamiento del Reto y Cuento</li>
+<li>⚡ Actividad 3: ¡Manos a la Obra! (Actividad Principal)</li>
+<li>⚡ Actividad 4: Puesta en Común y Cierre de la Misión</li>
+</ul>
+<strong>Entregable Clave:</strong>
+<ul>
+<li>Presentación exitosa del Guardián Inteligente, explicando su función, demostrando su operación y respondiendo preguntas básicas.</li>
+</ul>
+</td>
+<td>
+<strong>Materiales Específicos:</strong>
+<ul>
+<li>Proyectos finales completos de cada equipo.</li>
+</ul>
+<strong>Preparación Previa para ESTA Sesión:</strong>
+<ol>
+<li><strong>Revisión de Materiales:</strong> Asegurar que todos los materiales estén completos, limpios y listos para ser repartidos.</li>
+<li><strong>Preparación del Espacio:</strong> Organizar el aula para facilitar la actividad (círculo en el suelo, mesas de trabajo, espacio para moverse).</li>
+<li><strong>Familiarización:</strong> Leer el playbook completo para entender el flujo narrativo, los diálogos y las transiciones. Tener clara la historia o el reto que se presentará.</li>
+</ol>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div class="activity-card" id="activity-1">
+<h2>⚡ Actividad 1: ¡La Gran Apertura de la Expo de Guardianes! ⏰ 5 min</h2>
+<p>Nos preparamos para el momento estelar: ¡mostrar al mundo nuestros increíbles Guardianes Inteligentes!</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: ¡El Telón se Abre! (Proyectar Diapositiva 1) ⏰ 3 min</h3>
+<p>Da la bienvenida a los pequeños científicos con entusiasmo. Crea un ambiente de emoción y anticipación, como si estuvieran a punto de asistir a un gran evento de ciencia. Recuérdales que hoy es un día muy especial para compartir todo su trabajo.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡Hola, hola, mis pequeños genios de la tecnología! ¡Bienvenidos a nuestra gran "Feria de Guardianes Inteligentes"! ¿Sienten esa energía en el aire? Es la emoción de un día muy especial. Hoy es el día de la gran revelación, donde cada laboratorio, cada equipo, nos mostrará la increíble creación que han estado construyendo con tanto esfuerzo. ¡Es como una feria de ciencia, pero con nuestros propios inventos mágicos y muy, muy inteligentes!</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: Recordando Nuestros Superpoderes (Proyectar Diapositiva 2) ⏰ 2 min</h3>
+<p>Recuérdales la importancia de haber trabajado en equipo y cómo cada uno contribuyó a la creación de su Guardián. Anímalos a sentirse orgullosos de su esfuerzo y creatividad, y a repasar mentalmente qué parte presentará cada miembro del equipo.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¿Recuerdan cómo trabajaron juntos, como un súper equipo, para dar vida a estos ayudantes del aula? ¡Cada uno de ustedes es un inventor asombroso! Hoy es el momento de brillar y mostrar al mundo lo que han logrado. ¡Repasen un poquito en sus mentes: quién dirá el nombre de su Guardián, quién explicará su señal secreta, y quién nos mostrará su acción mágica! ¡A sus marcas, listos, para repasar y prepararse para el gran debut!</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-2">
+<h2>⚡ Actividad 2: ¡Listos para la Presentación Estelar! ⏰ 5 min</h2>
+<p>Antes de que el telón se levante, recordamos el propósito de nuestros Guardianes y lo que vamos a compartir.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: ¡El Mapa de Nuestra Presentación! (Proyectar Diapositiva 3) ⏰ 3 min</h3>
+<p>Reúne a los niños en un círculo o área de atención. Explica de forma clara y lúdica el formato de la "Feria de Guardianes". Usa gestos y ejemplos sencillos para que entiendan los puntos clave que deben presentar: el nombre de su Guardián, cuál es su señal secreta y cuál es la acción que realiza.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡Atención, atención, inventores y aventureros tecnológicos! ¡El público espera! Para que nuestra "Feria de Guardianes Inteligentes" sea un éxito rotundo, necesitamos recordar un mapa secreto para nuestra presentación. ¿Quién recuerda qué vamos a presentar? ¡Exacto! Primero, el nombre súper cool y original de nuestro Guardián. Luego, ¿cuál es su señal secreta? ¡Esa que le enseñamos con tanto cuidado! Y finalmente, ¿cuál es su acción? ¿Qué hace de especial nuestro Guardián? ¡Pensemos en estos tres puntos clave!</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: ¡Manos a la Obra con la Demostración! (Proyectar Diapositiva 4) ⏰ 2 min</h3>
+<p>Enfatiza la parte más emocionante: la demostración en vivo del Guardián. Introduce las "Estrategias de Transición" de manera divertida: el puntero de juguete y el micrófono falso. Anima a los niños a imaginar que son verdaderos expertos en tecnología presentando su invento.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">Y lo más emocionante de todo, mis pequeños ingenieros: ¡lo demostraremos en vivo! ¡Veremos cómo su Guardián cobra vida y hace su magia! Para que sea aún más profesional y divertido, ¡vamos a crear un ambiente de verdadera conferencia de tecnología! Aquí tengo un puntero mágico (mostrar puntero de juguete) para que señalen su creación, ¡y un micrófono invisible (simular que se sostiene uno) para que su voz se escuche fuerte y clara! ¿Están listos para ser los ingenieros más brillantes del mundo y mostrar sus increíbles inventos? ¡Sí! ¡Vamos a hacerlo!</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-3">
+<h2>⚡ Actividad 3: La Gran "Feria de Guardianes Inteligentes" ⏰ 25 min</h2>
+<p>¡Es el momento de que cada equipo suba al escenario y demuestre el poder de su Guardián Inteligente!</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: Preparando el Escenario de Estrellas (Proyectar Diapositiva 5) ⏰ 5 min</h3>
+<p>Organiza el espacio para que cada equipo tenga su momento de brillar. Pide a los niños que se sienten en un semicírculo o en sus lugares designados para ver las presentaciones. Asegúrate de que los proyectos de cada equipo estén accesibles y listos para ser llevados al frente. Invita al primer equipo a pasar al frente, con un aplauso inicial para calentar el ambiente.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡Bravo, equipos! El escenario está listo, las luces brillan (¡imaginen luces de colores!) y el mundo entero espera ver sus increíbles creaciones. Vamos a sentarnos cómodamente para que todos podamos ver y escuchar muy bien a nuestros compañeros. ¿Quién quiere ser el primer equipo en mostrarnos su Guardián Inteligente? ¡Recuerden hablar fuerte y claro, como verdaderos expertos y científicos! ¡Un gran aplauso para el primer equipo que pasará al frente!</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: ¡Los Primeros Guardianes Brillarán! (Proyectar Diapositiva 6) ⏰ 10 min</h3>
+<p>Guía a los primeros equipos durante su presentación. Recuérdales amablemente los puntos clave a cubrir (nombre, señal, acción) si se les olvida alguno. Haz preguntas de apoyo que les ayuden a explicar mejor su proyecto, como: "¿Cuál es el nombre tan divertido de su Guardián?", "¿Y cuál es la señal secreta que le enseñaron?", "¿Para qué nos sirve esta acción que hace su Guardián?". Asegúrate de que todos los niños tengan la oportunidad de ver la demostración en vivo.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡Guau, qué increíble presentación! ¡Miren cómo funciona el Guardián de este equipo! Es asombroso. (Dirigiéndose al equipo) Cuéntenme, ¿cómo se llama su Guardián? ¡Qué nombre tan original! Y esa señal que le enseñaron, ¿cómo la entrenaron? ¿Y para qué nos ayuda su Guardián en el aula? ¡Es fantástico cómo resuelve ese problema! ¡Sigan así, pequeños innovadores! ¡Cada Guardián es único y especial y nos ayuda de una manera diferente!</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 3: Más Héroes Tecnológicos en Acción (Proyectar Diapositiva 7) ⏰ 10 min</h3>
+<p>Continúa el proceso con los equipos restantes. Fomenta la participación de la audiencia animando a los demás niños a observar con atención y a pensar en preguntas sencillas para sus compañeros, como: "¿Qué fue lo que más te gustó del Guardián de tus amigos?". Celebra cada presentación con aplausos y comentarios positivos, reforzando el esfuerzo y la creatividad de cada equipo. Asegúrate de que el puntero de juguete y el micrófono falso roten para mantener la diversión.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡Qué emoción! ¡Ya hemos visto varios Guardianes asombrosos! ¡Ahora es el turno del siguiente equipo de superhéroes tecnológicos! (Al equipo) ¡Usen su puntero mágico y su micrófono invisible! (A la clase) ¿Listos para ver otra increíble demostración? ¡Miren bien cómo funciona! Después, podremos hacer una pregunta sencilla a nuestros amigos. Recuerden que aquí no hay errores, solo nuevas formas de aprender y construir. ¡Cada presentación es una oportunidad para aprender algo nuevo y aplaudir el gran trabajo de nuestros compañeros!</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="activity-card" id="activity-4">
+<h2>⚡ Actividad 4: ¡Misión Cumplida: Celebremos a Nuestros Guardianes! ⏰ 5 min</h2>
+<p>Reflexionamos sobre todo lo aprendido y celebramos el éxito de nuestra gran feria.</p>
+<div class="steps">
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 1: ¡El Gran Aplauso de los Campeones! (Proyectar Diapositiva 8) ⏰ 3 min</h3>
+<p>Dirige un gran aplauso entusiasta para todos los equipos, reconociendo el gran trabajo de cada uno. Inicia una breve discusión reflexiva haciendo preguntas como: "¿Qué fue lo más difícil de crear a su Guardián? ¿Entrenarlo o programarlo?", "¿Qué fue lo que más disfrutaron de este proyecto?". Permite que varios niños compartan sus respuestas brevemente.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡UN APLAUSO GIGANTE PARA TODOS NUESTROS INVENTORES Y CIENTÍFICOS! ¡Bravo, bravo, bravo! ¡Cada Guardián Inteligente que vimos hoy es una obra de arte, de tecnología y de mucho, mucho esfuerzo! ¡Estoy súper orgulloso de todos ustedes! Ahora, cuéntenme, ¿qué fue lo más difícil de crear a su Guardián? ¿Fue entrenarlo para que entendiera la señal o fue programarlo para que hiciera su acción? ¿Y qué fue lo que más les gustó de esta aventura tecnológica?</p>
+</div>
+</div>
+</div>
+<div class="step-card">
+<div class="step-content">
+<h3>Paso 2: Despedida de Nuestros Futuros Ingenieros (Proyectar Diapositiva 9) ⏰ 2 min</h3>
+<p>Concluye la sesión con palabras de felicitación y empoderamiento. Refuerza que han aprendido no solo a construir, sino también a trabajar en equipo, a resolver problemas y a presentar sus ideas. Anímales a seguir siendo curiosos y creativos en el futuro.</p>
+</div>
+<div class="collapsible">
+<button type="button" class="collapsible-button">Diálogo Sugerido</button>
+<div class="collapsible-content">
+<p class="dialogue assistant">¡MISIÓN CUMPLIDA, EQUIPO DE GENIOS! Hoy no solo crearon Guardianes Inteligentes, ¡crearon soluciones, aprendieron a trabajar como verdaderos ingenieros y científicos del futuro, y nos mostraron lo increíbles que son! ¡Cada uno de ustedes es un innovador! Recuerden que la curiosidad y la creatividad son sus superpoderes más grandes. ¡Sigan explorando, sigan inventando, sigan soñando! ¡Hasta la próxima misión, pequeños brillantes! ¡Lo hicieron increíble!</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</main>
+</div>
+<script src="script.js"></script>
 </body>
-
 </html>
